After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 700979 - GtkPlacesSidebar: do not unref mount
GtkPlacesSidebar: do not unref mount
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: Other
3.8.x
Other Linux
: Normal major
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2013-05-24 23:17 UTC by Alban Browaeys
Modified: 2013-05-26 04:03 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
GtkPlacesSidebar: do not unref mount (880 bytes, patch)
2013-05-24 23:17 UTC, Alban Browaeys
committed Details | Review
gdb session (53.10 KB, text/plain)
2013-05-24 23:20 UTC, Alban Browaeys
  Details

Description Alban Browaeys 2013-05-24 23:17:53 UTC
Created attachment 245281 [details] [review]
GtkPlacesSidebar: do not unref mount

Do not unref mount has we grabbed its pointer without taking
a reference.
Otherwise the following call to g_list_free_full on network_mounts
frees it a second time. Segfault in nautilus ensue.
Comment 1 Alban Browaeys 2013-05-24 23:20:33 UTC
Created attachment 245282 [details]
gdb session

this gdb session shows the two last (3->2 and 2->1 ref count) unref . The first is the above I removed and the next one is the g_list_free_full that follows it.
Comment 2 Matthias Clasen 2013-05-26 04:03:28 UTC
Attachment 245281 [details] pushed as b08fe39 - GtkPlacesSidebar: do not unref mount